@@ -75,6 +75,7 @@
                 <div class="ib-circle"></div>
                 <div class="ib-circle-hollow"></div>
                 <div class="ib-circle-dot"></div>
+                <div class="ib-circle-stop"></div>
                 <div class="ib-square"></div>
                 <div class="ib-square-hollow"></div>
                 <div class="ib-square-dot"></div>
