@@ -1084,6 +1084,44 @@
   border-radius: 50%;
 }
 
+.ib-circle-stop {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+  border: 6px solid #282828;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+}
+
+.ib-circle-stop:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.ib-circle-stop:active {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.ib-circle-stop:before {
+  position: absolute;
+  content: "";
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  background-color: #282828;
+  width: 100%;
+  height: 6px;
+  border-radius: 0;
+  left: 0;
+}
+
 .ib-rhombus {
   width: 24px;
   height: 24px;
