@@ -49,6 +49,7 @@
 @import "scss/shapes/circle";
 @import "scss/shapes/circle-hollow";
 @import "scss/shapes/circle-dot";
+@import "scss/shapes/circle-stop";
 @import "scss/shapes/rhombus";
 @import "scss/shapes/rhombus-hollow";
 @import "scss/shapes/octagon";
