@@ -1,0 +1,19 @@
+@import "../_foundation/styles";
+
+.ib-circle-stop {
+    @include button-no-before-after;
+    border: $border;
+    width: $size - $border-width * 2;
+    height: $size - $border-width * 2;
+    border-radius: 50%;
+
+    &:before {
+        @include button-after-before-setup;
+        @include top-center;
+        background-color: $dark-color;
+        width: 100%;
+        height: $border-width;
+        border-radius: $border-radius;
+        left: 0;
+    }
+}
